ensure code block examples wont wrap lines.

--- a/assets/css/kamon.css
+++ b/assets/css/kamon.css
@@ -454,7 +454,11 @@ pre {
 }
 
 :not(pre) > code[class*="language-"],
-pre[class*="language-"] { background: #f4f9fa; }
+pre[class*="language-"] {
+  word-wrap: normal;
+  background: #f4f9fa;
+}
+
 
 .btn-git {
   background-color: #8c9eb0;
